Thu Jul  1 16:01:12 2004  Jaiganesh B  <jai@dre.vanderbilt.edu>

        * DADAnCE/Deployment.xsd
        * DAnCE/Deployment.mwc:
        * DAnCE/Deployment.xsd.orig:
        * DAnCE/XMI.xsd:
        * DAnCE/XMI.xsd.orig:
        * DAnCE/Config_Handlers/Any_Handler.cpp:
        * DAnCE/Config_Handlers/Any_Handler.h:
        * DAnCE/Config_Handlers/Basic_Handler.cpp:
        * DAnCE/Config_Handlers/Basic_Handler.h:
        * DAnCE/Config_Handlers/CAD_Handler.cpp:
        * DAnCE/Config_Handlers/CAD_Handler.h:
        * DAnCE/Config_Handlers/CEPE_Handler.h
        * DAnCE/Config_Handlers/CEPE_Handler.cpp:
        * DAnCE/Config_Handlers/CPK_Handler.cpp:
        * DAnCE/Config_Handlers/CPK_Handler.h:
        * DAnCE/Config_Handlers/CPR_Handler.cpp:
        * DAnCE/Config_Handlers/CPR_Handler.h:
        * DAnCE/Config_Handlers/Cap_Handler.cpp:
        * DAnCE/Config_Handlers/Cap_Handler.h:
        * DAnCE/Config_Handlers/CompImplDesc_Handler.cpp:
        * DAnCE/Config_Handlers/CompImplDesc_Handler.h:
        * DAnCE/Config_Handlers/CompIntrDesc_Handler.cpp:
        * DAnCE/Config_Handlers/CompIntrDesc_Handler.h:
        * DAnCE/Config_Handlers/CompPkgDesc_Handler.cpp:
        * DAnCE/Config_Handlers/CompPkgDesc_Handler.h:
        * DAnCE/Config_Handlers/Config_Error_Handler.cpp:
        * DAnCE/Config_Handlers/Config_Error_Handler.h:
        * DAnCE/Config_Handlers/Config_Handler_export.h:
        * DAnCE/Config_Handlers/Config_Handlers.mpc:
        * DAnCE/Config_Handlers/DT_Handler.cpp:
        * DAnCE/Config_Handlers/DT_Handler.h:
        * DAnCE/Config_Handlers/Deployment.h:
        * DAnCE/Config_Handlers/DnC_Dump.cpp:
        * DAnCE/Config_Handlers/DnC_Dump.h:

          Checked in all the XML handlers needed by DAnCE.

Thu Jul  1 15:54:15 2004  Jaiganesh B  <jai@dre.vanderbilt.edu>

        * DAnCE/Config_Handlers/Domain_Handler.cpp:
        * DAnCE/Config_Handlers/Domain_Handler.h:
        * DAnCE/Config_Handlers/ERE_Handler.cpp: